syntax = "proto3";

package pb;

import "account.proto";

option go_package = "github.com/GiorgiMakharadze/bank-API-golang/pb";

message GetAccountRequest {
    int64 id = 1;
}
  
message GetAccountResponse {
    Account account = 1;  
}
